checking button style bug on ios possible fix

--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ input[type="submit"] {
     border: none;
     outline: none;
     color: #fff;
+    padding: 0.9rem 0 0.9rem 1.8rem;
     text-transform: capitalize;
     background: hsl(154, 59%, 51%);
     border-bottom: 2px solid rgb(0 0 0 / 18%);
